update package name

--- a/AccessControl/package.json
+++ b/AccessControl/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bunzz-AccessControl",
+  "name": "bunzz-accesscontrol",
   "version": "1.0.0",
   "description": "Bunzz AccessControl Module",
   "author": "Top-Kraken",
