--- a/ERC20Votes/package.json
+++ b/ERC20Votes/package.json
@@ -23,7 +23,7 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.0",
+    "@openzeppelin/contracts": "4.3.2",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@primitivefi/hardhat-dodoc": "^0.2.0",
     "@typechain/ethers-v5": "^10.0.0",
