--- a/StakingERC721/package.json
+++ b/StakingERC721/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StakingRewards",
+  "name": "StakingERC721",
   "scripts": {
     "compile": "hardhat compile",
     "typechain": "hardhat typechain",
@@ -14,6 +14,6 @@
     "hardhat": "2.12.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "4.8.0"
+    "@openzeppelin/contracts": "4.3.2"
   }
 }
