--- a/BinaryVault/package.json
+++ b/BinaryVault/package.json
@@ -13,8 +13,17 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.2",
+    "directory-tree": "^3.5.1",
     "hardhat": "^2.12.4",
-    "hardhat-gas-reporter": "^1.0.9"
+    "hardhat-gas-reporter": "^1.0.9",
+    "highlight.js": "^11.7.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-emoji": "^2.0.2",
+    "meow": "^7.1.1",
+    "mustache": "^4.2.0",
+    "node-emoji": "^1.11.0",
+    "pdf-from-html": "^0.1.2",
+    "soldoc": "^0.1.3-beta.2"
   },
   "dependencies": {
     "@nomiclabs/hardhat-web3": "^2.0.0",
